infra/deployments/artifacts/dev/experience/basic-app/templates/deployment.yaml
---
# Source: basic-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: experience
  labels:
    app: experience
spec:
  replicas: 1
  selector:
    matchLabels:
      app: experience
  template:
    metadata:
      labels:
        app: experience
    spec:
      containers:
        - name: app
          image: "registry:5000/cv-experience:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            null
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 1
            periodSeconds: 10

          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
