infra/deployments/artifacts/dev/experience/basic-app/templates/service-misql.yaml
---
# Source: basic-app/templates/service-misql.yaml
apiVersion: v1
kind: Service
metadata:
  name: experience-db
spec:
  type: ClusterIP
  selector:
    app: experience-db
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
