infra/deployments/artifacts/dev/experience/basic-app/templates/service.yaml
---
# Source: basic-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: experience
  labels:
    app: experience
    deploy-timestamp: "1773208329"
spec:
  type: ClusterIP
  selector:
    app: experience
  ports:
    - port: 8080
      targetPort: 
      protocol: TCP
