infra/deployments/artifacts/dev/experience/basic-app/templates/ingress.yaml
---
# Source: basic-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: experience
spec:
  ingressClassName: traefik
  rules:
    - host: experience.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: experience
                port:
                  number: 8080
